authentication/dump/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: default  
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "demo.learn.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: demo-vs
spec:
  hosts:
    - "demo.learn.com"
  gateways:
    - demo-gateway
  http:
    - match:
      - headers:
          x-auth-token:
            exact: "*"
      route:
        - destination:
            host: demo-svc.default.svc.cluster.local
            port:
              number: 80
    - redirect:
        uri: "/realms/demo/protocol/openid-connect/auth?client_id=demo-client&redirect_uri=https://demo.learn.com"
        authority: "keycloak.learn.com"
        scheme: https

              
---
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: "jwt-keycloak"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "https://keycloak.learn.com/realms/spike"
    jwksUri: "https://keycloak.learn.com/realms/spike/protocol/openid-connect/cert"
    outputPayloadToHeader: X-Auth-Token
    audiences: 
    - spike-client
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE", "PATCH"]
    when:
      - key: request.headers[x-auth-token]
        values: ["*"]
